# example-of-grpc

client/: CMakeLists.txt  client.cpp  client.h  main.cpp
server/: CMakeLists.txt  Protocol.proto  function.cpp  function.h  server.cc  server_func.cpp  server_func.h
